--- a/templates/compartilhar.html
+++ b/templates/compartilhar.html
@@ -54,6 +54,6 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="static/js/compartilhar.js"></script>
+    <script type="text/javascript" src="static/js/compartilhar.js"></script>
 </body>
 </html>
