--- a/templates/disparar_emails.html
+++ b/templates/disparar_emails.html
@@ -44,6 +44,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="static/js/disparar_emails.js"></script>
+    <script type="text/javascript" src="static/js/disparar_emails.js"></script>
 </body>
 </html>
