--- a/templates/index.html
+++ b/templates/index.html
@@ -136,6 +136,6 @@
     </div>
     <br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="static/js/main.js"></script>
+    <script type="text/javascript" src="static/js/main.js"></script>
 </body>
 </html>
