--- a/templates/compartilhar.html
+++ b/templates/compartilhar.html
@@ -57,7 +57,7 @@
     <script>
         // Variável global com a URL do site
         const SITE_URL = "{{ url_for('index', _external=True) }}";
-        const SHARE_TEXT = "Encontrei esse ótimo serviço para enviar currículos em Alagoas! Confira: ";
+        const SHARE_TEXT = "Encontrei esse ótimo serviço para enviar cuhttp://127.0.0.1:8080/rrículos em Alagoas! Confira: ";
         
         function copiarLink() {
             const input = document.getElementById('link_compartilhamento');
