--- a/templates/index.html
+++ b/templates/index.html
@@ -127,10 +127,14 @@
                     </span>
                 </label>
                 <select class="form-select" id="tudo_ou_nada" name="tudo_ou_nada">
-                    <option value="10">Apenas 10 primeiros (recomendado para teste)</option>
+                    <option value="1">Apenas 1 primeiros (recomendado para teste)</option>
+                    <option value="10">Apenas 10 primeiros</option>
+                    <option value="25">Apenas 25 primeiros</option>
+                    <option value="50">Apenas 50 primeiros</option>
+                    <option value="100">Apenas 100 primeiros</option>
                     <option value="-1">Todos os emails da planilha</option>
                 </select>
-                <div class="form-text">Para teste, envie primeiro para 10 emails</div>
+                <div class="form-text">Para teste, envie primeiro para 1 emails</div>
             </div>
             
             <button type="submit" class="btn btn-primary">
